# flask-kino

./: .gitignore  README.md  docker-compose.yml  r.txt  requirements.txt
app/: Dockerfile  entrypoint.sh  pyproject.toml  run.py
app/app/: __init__.py  extensions.py  routes.py  settings.py  swagger.py
app/app/admin/: __init__.py  routes.py  services.py
app/app/api/: __init__.py  auth.py  mixin.py  routes.py  schemas.py  service.py  swagger_doc.py
app/app/backup/: __init__.py  admins-1.py  admins.py  connection.py  tools.py
app/app/front_api/: __init__.py  auth.py  mixin.py  routes copy.py  routes.py  schemas.py  swagger_doc.py
app/app/movies/: Mixin.py  __init__.py  admin_logica.py  admins.py  delete_from_many_to_many.py  models.py  routes.py  routes_api.py  schemas.py  services.py  services_api.py  tools.py
app/app/static/: kinobox_player.js  style_range_years.css
app/app/templates/: base.html  detail_movie copy 2.html  detail_movie copy.html  detail_movie.html  index-2.html  index.html  login.html  profile.html  register copy.html  register-2.html  register.html  search.html  user.html
app/app/users/: __init__.py  admin_logica.py  admins.py  auth.py  forms.py  models.py  routes.py  routes_api.py  schemas.py  service.py  validation.py  views.py
app/migrations/versions/: 01beae44200d_.py  0e15915def5d_.py  107629da4697_.py  1ba4a9d6a29b_.py  2c091e683b75_.py  2fcffeb56007_.py  4d64c3152243_.py  55556b86a857_.py  57efc825ad9e_.py  620667d2cb5f_.py  75738eeb0dbf_.py  7ea56b88af89_.py  a2a44ef987d8_.py  (+5 more)
app/tests/: conftest.py  test_app.py
(+126 files in other folders)
